k8s/pod-with-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pvc
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["sh", "-c", "echo 'data survives!' > /data/hello.txt && sleep 3600"]
      volumeMounts:
        - name: storage
          mountPath: /data
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: my-pvc
