k8s/node-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
spec:
  type: ClusterIP
  selector:
    app: node-app
  ports:
    - port: 3000
