k8s/py-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-app
spec:
  selector:
    app: py-app
  ports:
    - port: 5000
