k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix   # 前缀匹配
            backend:
              service:
                name: node-app
                port:
                  number: 3000
          - path: /python
            pathType: Prefix   # /python 开头的请求
            backend:
              service:
                name: py-app
                port:
                  number: 5000
